k8/openweather-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openweather-service
spec:
  selector:
    app: openweather-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
