k8/redis-deployment.yml
apiVersion: apps/v1  
kind: Deployment
metadata:
  name: redis-master 
  labels:
    app: redis       
spec:
  selector:
    matchLabels:     
      app: redis
      role: master
      tier: backend
  replicas: 1        
  template:          
    metadata:
      labels:        
        app: redis
        role: master
        tier: backend
    spec:            
      containers:
      - name: master
        image: redis
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service        
metadata:
  name: redis-master 
  labels:            
    app: redis
    role: master
    tier: backend
spec:
  ports:
  - port: 6379       
    targetPort: 6379
  selector:          
    app: redis
    role: master
    tier: backend
