k8/smarthome-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smarthome-ingress
  labels:
    name: smarthome-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/*"
        backend:
          service:
            name: dashboard-service
            port: 
              number: 3000
      - pathType: Prefix
        path: "/api/*"
        backend:
          service:
            name: openweather-service
            port: 
              number: 8080
